<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/logoWarung"
            android:layout_width="141dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bts"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/namaWarung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="cursive"
            android:layout_marginTop="5dp"
            android:text="@string/batagor_sultan_nama"
            android:textAlignment="center"
            android:textColor="#F44336"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/menu_makanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="cursive"
            android:text="@string/menu_makanan"
            android:textColor="#9C27B0"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <CheckBox
                android:id="@+id/batagor_rakyat_jelata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="cursive"
                style="@style/Button_style"
                android:text="@string/batagor_rakyat_jelata" />

            <EditText
                android:id="@+id/et_batagor_1"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="84dp"
                android:background="@drawable/edittext"
                android:textAlignment="center"
                android:hint="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <CheckBox
                android:id="@+id/batagor_premium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="cursive"
                style="@style/Button_style"
                android:text="@string/batagor_premiun" />

            <EditText
                android:id="@+id/et_batagor_2"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="109dp"
                android:background="@drawable/edittext"
                android:textAlignment="center"
                android:hint="0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <CheckBox
                android:id="@+id/batagor_vip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="cursive"
                style="@style/Button_style"
                android:text="@string/batagor_VIP" />

            <EditText
                android:id="@+id/et_batagor_3"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="121dp"
                android:background="@drawable/edittext"
                android:textAlignment="center"
                android:hint="0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <CheckBox
                android:id="@+id/batagor_sultan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="cursive"
                style="@style/Button_style"
                android:text="@string/batagor_sultan" />

            <EditText
                android:id="@+id/et_batagor_4"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="101dp"
                android:background="@drawable/edittext"
                android:textAlignment="center"
                android:hint="0"/>

        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/menu_minuman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="cursive"
                android:text="Menu - Minuman"
                android:textColor="#9C27B0"
                android:textSize="20dp"
                android:textStyle="bold"/>


        </LinearLayout>


        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/es_teh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="cursive"
                style="@style/Button_style"
                android:text="@string/es_teh" />

            <EditText
                android:id="@+id/et_minuman_1"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="104dp"
                android:background="@drawable/edittext"
                android:textAlignment="center"
                android:hint="0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <CheckBox
                android:id="@+id/air_mineral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="cursive"
                style="@style/Button_style"
                android:text="@string/air_meneral" />

            <EditText
                android:id="@+id/et_minuman_2"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="136dp"
                android:background="@drawable/edittext"
                android:textAlignment="center"
                android:hint="0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <CheckBox
                android:id="@+id/air_jeruk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="cursive"
                style="@style/Button_style"
                android:text="@string/air_jeruk" />

            <EditText
                android:id="@+id/et_minuman_3"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:background="@drawable/edittext"
                android:textAlignment="center"
                android:hint="0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <CheckBox
                android:id="@+id/es_buah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="cursive"
                style="@style/Button_style"
                android:text="Es Buah Segar (Rp.10.000,-)" />

            <EditText
                android:id="@+id/et_minuman_4"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="118dp"
                android:background="@drawable/edittext"
                android:textAlignment="center"
                android:hint="0"/>

        </LinearLayout>

        <Button
            android:id="@+id/hitung"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button"
            android:fontFamily="cursive"
            android:onClick="hitungTagihan"
            android:text="Hitung"
            android:textColor="#FFFF" />

        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="wrap_content"

            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="cursive"
                android:text="@string/total_harga_makanan" />

            <TextView
                android:id="@+id/total_makanan"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@drawable/edittext"
                android:textAlignment="center"
                android:hint="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="cursive"
                android:layout_marginTop="5dp"
                android:text="@string/total_harga_minuman" />

            <TextView
                android:id="@+id/total_minuman"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext"
                android:textAlignment="center"
                android:hint="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="cursive"
                android:text="@string/total"
                android:layout_marginTop="5dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_harga"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="73dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext"
                android:textAlignment="center"
                android:hint="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bayar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="cursive"
                android:layout_marginTop="5dp"
                android:text="@string/bayar" />

            <EditText
                android:id="@+id/bayar_aja"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="71dp"
                android:background="@drawable/edittext"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:hint="@string/_0" />

        </LinearLayout>

        <Button
            android:id="@+id/bayar_kasir"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="cursive"
            android:text="@string/bayar_aja"
            android:onClick="payNow"
            android:background="@drawable/button"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="#FFFF" />
    </LinearLayout>

</ScrollView>